--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
    
 
 <main>
+<!--removed div/replace with section for semantic adherence-->
    <section class="search-engine-optimization">
         <h2>Search Engine Optimization</h2>   
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
@@ -33,7 +34,7 @@
             </p>
     </section>
 
-
+<!--removed div/replace with section for semantic adherence-->
     <section class="online-reputation-management">
         <h2>Online Reputation Management</h2>
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
@@ -41,8 +42,8 @@
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
     </section>
-    
-    
+
+    <!--removed div/replace with section for semantic adherence-->
     <section class="social-media-marketing">
         <h2>Social Media Marketing</h2>
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
@@ -53,14 +54,16 @@
 </main>
 
       <aside> <!--removed div/replaced with aside -->
-        <section class="benefit-lead"> <!--removed div/replaced with section-->
+        <!--removed div/replace with section for semantic adherence-->
+        <section class="benefit-lead"> 
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </sectiom>
+        </section>
 
+        <!--removed div/replace with section for semantic adherence-->
         <section class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
@@ -69,7 +72,8 @@
             </p>
         </section>
 
-        <section class="benefit-cost">
+        <!--removed div/replace with section for semantic adherence-->
+        <section class="benefit-cost"> 
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png"></img>
             <p>
@@ -80,13 +84,11 @@
 
  
 
-    <div class="footer">
+    <footer> <!--removed div/replaced with footer for semantic adherence-->
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
-</div>
+    </footer> <!--removed div/replaced with footer for semantic adherence-->
 </body>
-
 </html>
