--- a/index.html
+++ b/index.html
@@ -20,62 +20,67 @@
 
     <!--digital marketing meeting image link added as a source w/ figure elements-->
     <figure>
-        <img src= "/assets/images/digital-marketing-meeting.jpg" class="hero" />
+        <img src= "/assets/images/digital-marketing-meeting.jpg" class="hero" 
+        alt="people in a marketing meeting" />
     </figure>
-   
-
+  
 <main>
 <!--removed div/replace with section for semantic adherence-->
-   <section class="search-engine-optimization">
-        <h2>Search Engine Optimization</h2>   
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+   <section class="content"> 
+    <article id ="search-engine-optimization">
+            <img src="./assets/images/search-engine-optimization.jpg" alt="spiral notebook with illustrations"
+            class="float-left" />
+            <h2>Search Engine Optimization</h2> 
             <p>
              The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-    </section>
+    </article>
 
 <!--removed div/replace with section for semantic adherence-->
-    <section class="online-reputation-management">
-        <h2>Online Reputation Management</h2>
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+    <article id="online-reputation-management">
+            <img src="./assets/images/online-reputation-management.jpg" alt="open laptop with graphs on screen"
+            class="float-right" />
+            <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-    </section>
+        </article>
 
     <!--removed div/replace with section for semantic adherence-->
-    <section class="social-media-marketing">
-        <h2>Social Media Marketing</h2>
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+    <article id="social-media-marketing">
+            <img src="./assets/images/social-media-marketing.jpg" alt="social media tags with hands" 
+            class="float-left"/>
+            <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-    </section>
+        </article>
+   </section>
 </main>
 
       <aside> <!--removed div/replaced with aside -->
         <!--removed div/replace with section for semantic adherence-->
-        <section class="benefit-lead"> 
+        <section> 
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="sun into funnel with dollar sign"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
 
         <!--removed div/replace with section for semantic adherence-->
-        <section class="benefit-brand">
+        <section>
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="lightbulb with suit and tie" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
 
         <!--removed div/replace with section for semantic adherence-->
-        <section class="benefit-cost"> 
+        <section> 
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <img src="./assets/images/cost-management.png" alt="dollar signs with gear" />
             <p>
                 As the search ranking for your business increases,your advertising costs decrease, and you no longer need to advertise your page.
             </p>
@@ -89,6 +94,6 @@
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </footer> <!--removed div/replaced with footer for semantic adherence-->
-</body>
+    </footer> 
+  </body>
 </html>
