--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </figure>
   
 <main>
-<!--removed div/replace with section for semantic adherence-->
+<!--removed div/replace with section and article elements for semantic adherence-->
    <section class="content"> 
     <article id ="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="spiral notebook with illustrations"
@@ -36,7 +36,7 @@
             </p>
     </article>
 
-<!--removed div/replace with section for semantic adherence-->
+<!--removed div/replace with section and article elements for semantic adherence-->
     <article id="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" alt="open laptop with graphs on screen"
             class="float-right" />
@@ -46,7 +46,7 @@
             </p>
         </article>
 
-    <!--removed div/replace with section for semantic adherence-->
+    <!--removed div/replace with section and article elements for semantic adherence-->
     <article id="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" alt="social media tags with hands" 
             class="float-left"/>
