--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Horiseon</title> <!--specific title-->
 </head>
 
-<body>
     <header class="header"> <!--removed div/replaced with header for semantic adherence-->
        <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>    <!--removed div/replaced with nav for semantic adherence-->
@@ -18,15 +17,18 @@
         </nav>
     </header>
 
+
+  <body>
     <!--digital marketing meeting image link added as a source w/ figure elements-->
-    <figure>
+    <section class="hero-image">
         <img src= "/assets/images/digital-marketing-meeting.jpg" class="hero" 
-        alt="people in a marketing meeting" />
-    </figure>
+        alt= />
+    </section>
   
 <main>
 <!--removed div/replace with section and article elements for semantic adherence-->
-   <section class="content"> 
+  <section>
+    <section class="content"> 
     <article id ="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="spiral notebook with illustrations"
             class="float-left" />
@@ -86,6 +88,7 @@
             </p>
         </section>
     </aside>
+</section>
 
  
 
